--- a/pom.xml
+++ b/pom.xml
@@ -128,18 +128,18 @@
 
 
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jetty</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-jetty</artifactId>-->
+<!--		</dependency>-->
 
 
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/apache-jsp -->
-<!--		<dependency>-->
-<!--			<groupId>org.eclipse.jetty</groupId>-->
-<!--			<artifactId>apache-jsp</artifactId>-->
-<!--			<version>9.4.31.v20200723</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>apache-jsp</artifactId>
+			<version>9.4.31.v20200723</version>
+		</dependency>
 
 
 
@@ -153,11 +153,11 @@
 
 
 
-<!--		<dependency>-->
-<!--			<groupId>jstl</groupId>-->
-<!--			<artifactId>jstl</artifactId>-->
-<!--			<version>1.2</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 
 		<dependency>
