--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
 
 
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--		</dependency>-->
+
+
+
 
 		<!--// ok http dependency-->
 <!--		<dependency>-->
